Add js functionality

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <ul class="container">
-        <li class="panel active" style="background-image: url(images/explore.jpg);">
+        <li class="panel" style="background-image: url(images/explore.jpg);">
             <h3>Explore The World</h3>
         </li>
-        <li class="panel active" style="background-image: url(images/sunnyBeach.jpg);">
+        <li class="panel" style="background-image: url(images/sunnyBeach.jpg);">
             <h3>Sunny Beach</h3>
         </li>
-        <li class="panel active" style="background-image: url(images/winter.jpg);">
+        <li class="panel" style="background-image: url(images/winter.jpg);">
             <h3>City in Winter</h3>
         </li>
-        <li class="panel active" style="background-image: url(images/forest.jpg);">
+        <li class="panel" style="background-image: url(images/forest.jpg);">
             <h3>Forest</h3>
         </li>
-        <li class="panel active" style="background-image: url(images/clouds.jpg);">
+        <li class="panel" style="background-image: url(images/clouds.jpg);">
             <h3>Mountains in clouds</h3>
         </li>
     </ul>
